--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v2.0
         with:
-          envkey_MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
-          envkey_APP_MODEL_NAME: ${{ secrets.APP_MODEL_NAME }}
+          MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
+          APP_MODEL_NAME: ${{ secrets.APP_MODEL_NAME }}
           file_name: .env
           fail_on_empty: true
           sort_keys: true
@@ -35,7 +35,7 @@ jobs:
         run: docker compose up -d
       # Execute pytest
       - name: Testing
-        run: docker compose exec -it dash-demo pytest
+        run: docker compose exec -T cppm-app pytest
       # If the testing pass, upload the image
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -55,11 +55,14 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: .Dockerfile
+          file: Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+      - name: Cleanup
+        if: always()
+        run: docker compose down
   deploy:
-    environment: Production
+    environment: production
     needs: build-test
     runs-on: ubuntu-latest
     steps:
@@ -73,5 +76,7 @@ jobs:
           proxy_username: ${{ secrets.USERNAME }}
           proxy_key: ${{ secrets.KEY }}
           script: |
-            tag=${{ github.ref_name }} docker compose -f st125998/docker-compose-a3.yaml down
-            tag=${{ github.ref_name }} docker compose -f st125998/docker-compose-a3.yaml up -d
+            export TAG=${{ github.ref_name }}
+            docker compose -f docker_compose_a3.yml down || true
+            docker compose -f docker_compose_a3.yml pull
+            docker compose -f docker_compose_a3.yml up -d
