--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -33,9 +33,11 @@ jobs:
         run: docker compose build
       - name: Compose up
         run: docker compose up -d
+      - name: Wait for services
+        run: sleep 10
       # Execute pytest
       - name: Testing
-        run: docker compose exec -T cppm-app pytest
+        run: docker compose exec -T cppm pytest
       # If the testing pass, upload the image
       - name: Login to Docker Hub
         uses: docker/login-action@v3
