--- a/requirements.txt
+++ b/requirements.txt
@@ -1,212 +1,105 @@
-absl-py==2.3.1
-accelerate==1.10.1
-aiobotocore==2.24.2
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
-aiohttp-retry==2.9.1
-aioitertools==0.12.0
-aiosignal==1.4.0
 alembic==1.16.5
-amqp==5.3.1
 annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
-anyio==4.10.0
-appdirs==1.4.4
-appnope==0.1.4
-argon2-cffi==25.1.0
-argon2-cffi-bindings==25.1.0
-arrow==1.3.0
+anyio==4.11.0
 asttokens==3.0.0
-astunparse==1.6.3
-async-lru==2.0.5
-asyncssh==2.21.0
-atpublic==6.0.1
 attrs==25.3.0
 authlib==1.6.4
-babel==2.17.0
-backcall==0.2.0
-beautifulsoup4==4.13.5
-billiard==4.2.1
-biopython==1.77
-bleach==6.2.0
 blinker==1.9.0
-boto3==1.40.18
-botocore==1.40.18
-cachetools==5.5.2
-catboost==1.2.8
-celery==5.5.3
+cachetools==6.2.0
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
 click==8.3.0
-click-didyoumean==0.3.1
-click-plugins==1.1.1.2
-click-repl==0.3.0
 cloudpickle==3.1.1
-colorama==0.4.6
-colorlog==6.9.0
 comm==0.2.3
-configobj==5.0.9
-contourpy==1.3.3
+contourpy==1.3.2
 cryptography==45.0.7
 cycler==0.12.1
 cyclopts==3.24.0
 dash==3.2.0
 dash-bootstrap-components==2.0.4
-dash-testing-stub==0.0.2
-databricks-cli==0.18.0
-databricks-sdk==0.66.0
-datasets==2.14.4
-debugpy==1.8.16
+dash-daq==0.6.0
+databricks-sdk==0.67.0
+debugpy==1.8.17
 decorator==5.2.1
-defusedxml==0.7.1
-dictdiffer==0.9.0
-dill==0.3.7
-diskcache==5.6.3
-distro==1.9.0
+dep-logic==0.5.2
+distlib==0.4.0
 dnspython==2.8.0
 docker==7.1.0
-docopt==0.6.2
 docstring-parser==0.17.0
 docutils==0.22.2
-dpath==2.2.0
-dulwich==0.24.1
-dvc==3.63.0
-dvc-data==3.16.12
-dvc-http==2.32.0
-dvc-objects==5.1.1
-dvc-render==1.0.2
-dvc-studio-client==0.22.0
-dvc-task==0.40.2
 email-validator==2.3.0
-entrypoints==0.4
 exceptiongroup==1.3.0
-executing==2.2.0
-fastapi==0.117.1
-fastjsonschema==2.21.2
-fastmcp==2.12.3
+executing==2.2.1
+fastapi==0.118.0
+fastmcp==2.12.4
 filelock==3.19.1
+findpython==0.7.0
 flask==3.1.2
-flask-wtf==1.2.2
-flatbuffers==25.2.10
-flatten-dict==0.4.2
-flufl-lock==8.2.0
-fonttools==4.60.0
-fqdn==1.5.1
-frozenlist==1.7.0
+fonttools==4.60.1
 fsspec==2025.9.0
-funcy==2.0
-gast==0.6.0
 gitdb==4.0.12
 gitpython==3.1.45
-google-auth==2.40.3
-google-pasta==0.2.0
-grandalf==0.8
+google-auth==2.41.0
 graphene==3.4.3
 graphql-core==3.2.6
 graphql-relay==3.2.0
-graphviz==0.21
 greenlet==3.2.4
-grpcio==1.74.0
-gto==1.8.0
 gunicorn==23.0.0
 h11==0.16.0
-h5py==3.14.0
-hf-xet==1.1.9
+hishel==0.1.3
 httpcore==1.0.9
-httptools==0.6.4
 httpx==0.28.1
 httpx-sse==0.4.1
-huggingface-hub==0.34.4
-hydra-core==1.3.2
+id==1.5.0
 idna==3.10
-imbalanced-learn==0.14.0
 importlib-metadata==8.7.0
-iniconfig==2.1.0
-inline==0.0.1
+installer==0.7.0
 ipykernel==6.30.1
-ipympl==0.9.7
-ipython==8.12.3
+ipython==8.37.0
 ipython-pygments-lexers==1.1.1
-ipywidgets==8.1.7
 isodate==0.7.2
-isoduration==20.11.0
-iterative-telemetry==0.0.10
 itsdangerous==2.2.0
 jedi==0.19.2
 jinja2==3.1.6
-jmespath==1.0.1
 joblib==1.5.2
-json5==0.12.1
-jsonpointer==3.0.0
 jsonschema==4.25.1
 jsonschema-path==0.3.4
 jsonschema-specifications==2025.9.1
-jupyter==1.1.1
 jupyter-client==8.6.3
-jupyter-console==6.6.3
 jupyter-core==5.8.1
-jupyter-events==0.12.0
-jupyter-lsp==2.3.0
-jupyter-server==2.17.0
-jupyter-server-terminals==0.5.3
-jupyterlab==4.4.7
-jupyterlab-pygments==0.3.0
-jupyterlab-server==2.27.3
-jupyterlab-widgets==3.0.15
-keras==3.11.3
 kiwisolver==1.4.9
-kombu==5.5.4
-lark==1.2.2
 lazy-object-proxy==1.12.0
-libclang==18.1.1
-lightgbm==4.6.0
-llvmlite==0.45.0
-lxml==6.0.2
 mako==1.3.10
-markdown==3.9
 markdown-it-py==4.0.0
-markupsafe==3.0.2
+markupsafe==3.0.3
 matplotlib==3.10.6
 matplotlib-inline==0.1.7
-mcp==1.14.1
+mcp==1.15.0
 mdurl==0.1.2
-mistune==3.1.3
-ml-dtypes==0.5.3
 mlflow==3.4.0
 mlflow-skinny==3.4.0
 mlflow-tracing==3.4.0
 more-itertools==10.8.0
 mpmath==1.3.0
-multidict==6.6.4
-multiprocess==0.70.15
-namex==0.1.0
-narwhals==2.2.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
+narwhals==2.6.0
 nest-asyncio==1.6.0
-networkx==3.5
-notebook==7.4.5
-notebook-shim==0.2.4
-numba==0.62.0
-numpy==2.3.3
+networkx==3.4.2
+numpy==2.2.6
 nvidia-cublas-cu12==12.8.4.1
-nvidia-cuda-cupti-cu12==12.8.90
-nvidia-cuda-nvrtc-cu12==12.8.93
-nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
 nvidia-cudnn-cu12==9.10.2.21
-nvidia-cufft-cu12==11.3.3.83
-nvidia-cufile-cu12==1.13.1.3
-nvidia-curand-cu12==10.3.9.90
-nvidia-cusolver-cu12==11.7.3.90
-nvidia-cusparse-cu12==12.5.8.93
-nvidia-cusparselt-cu12==0.7.1
-nvidia-nccl-cu12==2.27.3
-nvidia-nvjitlink-cu12==12.8.93
-nvidia-nvtx-cu12==12.8.90
-oauthlib==3.3.1
-omegaconf==2.3.0
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
 openapi-core==0.19.5
 openapi-pydantic==0.5.1
 openapi-schema-validator==0.6.3
@@ -215,154 +108,79 @@ opentelemetry-api==1.37.0
 opentelemetry-proto==1.37.0
 opentelemetry-sdk==1.37.0
 opentelemetry-semantic-conventions==0.58b0
-opt-einsum==3.4.0
-optree==0.17.0
-optuna==4.5.0
-orjson==3.11.3
-outcome==1.3.0.post0
 packaging==25.0
-pandas==2.3.2
-pandocfilters==1.5.1
+pandas==2.3.3
 parse==1.20.2
 parso==0.8.5
 pathable==0.4.4
-pathspec==0.12.1
-percy==2.0.2
+pbs-installer==2025.9.18
+pdm==2.25.9
 pexpect==4.9.0
-pickleshare==0.7.5
 pillow==11.3.0
-pip==25.2
-pipreqs==0.5.0
-platformdirs==4.3.8
+platformdirs==4.4.0
 plotly==6.3.0
-pluggy==1.6.0
 ppscore==1.1.0
-prometheus-client==0.23.1
-prometheus-flask-exporter==0.23.2
-prompt-toolkit==3.0.51
-propcache==0.3.2
+prompt-toolkit==3.0.52
 protobuf==6.32.1
-psutil==7.0.0
+psutil==7.1.0
 ptyprocess==0.7.0
 pure-eval==0.2.3
-pyaml==25.7.0
 pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
 pycparser==2.23
 pydantic==2.11.9
 pydantic-core==2.33.2
-pydantic-settings==2.10.1
-pydot==4.0.1
-pygit2==1.18.2
+pydantic-settings==2.11.0
 pygments==2.19.2
-pygtrie==2.5.0
-pyjwt==2.10.1
-pyopenssl==25.3.0
 pyparsing==3.2.5
-pyperclip==1.10.0
-pysocks==1.7.1
-pytest==8.4.2
+pyperclip==1.11.0
+pyproject-hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
-python-editor==1.0.4
-python-json-logger==3.3.0
 python-multipart==0.0.20
 pytz==2025.2
-pyyaml==6.0.2
-pyzmq==27.0.2
-querystring-parser==1.2.4
+pyyaml==6.0.3
+pyzmq==27.1.0
 referencing==0.36.2
-regex==2025.9.1
 requests==2.32.5
+resolvelib==1.2.0
 retrying==1.4.2
 rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rfc3987-syntax==1.1.0
 rich==14.1.0
 rich-rst==1.3.1
 rpds-py==0.27.1
 rsa==4.9.1
-ruamel-yaml==0.18.15
-ruamel-yaml-clib==0.2.12
-s3fs==2025.9.0
-s3transfer==0.13.1
-safetensors==0.6.2
 scikit-learn==1.7.2
-scikit-optimize==0.10.2
-scipy==1.16.2
-scmrepo==3.5.2
+scipy==1.15.3
 seaborn==0.13.2
-selenium==4.2.0
-semver==3.0.4
-send2trash==1.8.3
 setuptools==80.9.0
-shap==0.48.0
 shellingham==1.5.4
-shortuuid==1.0.13
-shtab==1.7.2
 six==1.17.0
-slicer==0.0.8
 smmap==5.0.2
 sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.7
+socksio==1.0.0
 sqlalchemy==2.0.43
 sqlparse==0.5.3
-sqltrie==0.11.2
 sse-starlette==3.0.2
 stack-data==0.6.3
 starlette==0.48.0
 sympy==1.14.0
-tabulate==0.9.0
-tensorboard==2.20.0
-tensorboard-data-server==0.7.2
-tensorflow==2.20.0
-termcolor==3.1.0
-terminado==0.18.1
 threadpoolctl==3.6.0
-tinycss2==1.4.0
-tokenizers==0.22.0
 tomlkit==0.13.3
 torch==2.8.0
-torchaudio==2.8.0
-torchvision==0.23.0
+torchvision==0.22.1
 tornado==6.5.2
-tqdm==4.67.1
 traitlets==5.14.3
-transformers==4.56.1
-trio==0.31.0
-trio-websocket==0.12.2
-triton==3.4.0
-typer==0.17.4
-types-python-dateutil==2.9.0.20250822
+triton==3.3.1
+truststore==0.10.4
 typing-extensions==4.15.0
 typing-inspection==0.4.1
 tzdata==2025.2
-uri-template==1.3.0
-urllib3==1.26.20
-urllib3-secure-extra==0.1.0
-uv==0.8.19
-uvicorn==0.36.0
-uvloop==0.21.0
-vine==5.1.0
-voluptuous==0.15.2
-waitress==3.0.2
-watchfiles==1.1.0
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==15.0.1
+unearth==0.17.5
+urllib3==2.5.0
+uvicorn==0.37.0
+virtualenv==20.34.0
+wcwidth==0.2.14
 werkzeug==3.1.1
-wheel==0.45.1
-widgetsnbextension==4.0.14
-wrapt==1.17.3
-wsproto==1.2.0
-wtforms==3.2.1
-xgboost==3.0.4
-xxhash==3.5.0
-yarg==0.1.9
-yarl==1.20.1
-zc-lockfile==3.0.post1
 zipp==3.23.0
