--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -36,8 +36,10 @@ jobs:
       - name: Wait for services
         run: sleep 10
       # Execute pytest
-      - name: Testing
-        run: docker compose exec -T cppm pytest
+      - name: Run unit tests
+        run: |
+          docker compose run --rm cppm pip install pytest
+          docker compose run --rm cppm pytest -v
       # If the testing pass, upload the image
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -79,6 +81,6 @@ jobs:
           proxy_key: ${{ secrets.KEY }}
           script: |
             export TAG=${{ github.ref_name }}
-            docker compose -f docker_compose_a3.yml down || true
-            docker compose -f docker_compose_a3.yml pull
-            docker compose -f docker_compose_a3.yml up -d
+            docker compose -f docker-compose.yml down || true
+            docker compose -f docker-compose.yml pull
+            docker compose -f docker-compose.yml up -d
