--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
 alembic==1.16.5
 annotated-types==0.7.0
-anyio==4.11.0
+anyio==4.10.0
 asttokens==3.0.0
 attrs==25.3.0
 authlib==1.6.4
 blinker==1.9.0
-cachetools==6.2.0
+cachetools==5.5.2
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
 click==8.3.0
 cloudpickle==3.1.1
 comm==0.2.3
-contourpy==1.3.2
+contourpy==1.3.3
 cryptography==45.0.7
 cycler==0.12.1
 cyclopts==3.24.0
 dash==3.2.0
 dash-bootstrap-components==2.0.4
 dash-daq==0.6.0
-databricks-sdk==0.67.0
+databricks-sdk==0.66.0
 debugpy==1.8.17
 decorator==5.2.1
 defusedxml==0.7.1
@@ -33,15 +33,15 @@ email-validator==2.3.0
 exceptiongroup==1.3.0
 executing==2.2.1
 fastapi==0.118.0
-fastmcp==2.12.4
+fastmcp==2.12.3
 filelock==3.19.1
 findpython==0.7.0
 flask==3.1.2
-fonttools==4.60.1
+fonttools==4.60.0
 fsspec==2025.9.0
 gitdb==4.0.12
 gitpython==3.1.45
-google-auth==2.41.0
+google-auth==2.40.3
 graphene==3.4.3
 graphql-core==3.2.6
 graphql-relay==3.2.0
@@ -55,9 +55,10 @@ httpx-sse==0.4.1
 id==1.5.0
 idna==3.10
 importlib-metadata==8.7.0
+iniconfig==2.1.0
 installer==0.7.0
 ipykernel==6.30.1
-ipython==8.37.0
+ipython==9.5.0
 ipython-pygments-lexers==1.1.1
 isodate==0.7.2
 itsdangerous==2.2.0
@@ -73,10 +74,10 @@ kiwisolver==1.4.9
 lazy-object-proxy==1.12.0
 mako==1.3.10
 markdown-it-py==4.0.0
-markupsafe==3.0.3
+markupsafe==3.0.2
 matplotlib==3.10.6
 matplotlib-inline==0.1.7
-mcp==1.15.0
+mcp==1.14.1
 mdurl==0.1.2
 mlflow==3.4.0
 mlflow-skinny==3.4.0
@@ -85,21 +86,22 @@ more-itertools==10.8.0
 mpmath==1.3.0
 narwhals==2.6.0
 nest-asyncio==1.6.0
-networkx==3.4.2
+networkx==3.5
 numpy==2.3.3
 nvidia-cublas-cu12==12.8.4.1
-nvidia-cuda-cupti-cu12==12.6.80
-nvidia-cuda-nvrtc-cu12==12.6.77
-nvidia-cuda-runtime-cu12==12.6.77
-nvidia-cufft-cu12==11.3.0.4
-nvidia-cufile-cu12==1.11.1.6
-nvidia-curand-cu12==10.3.7.77
-nvidia-cusolver-cu12==11.7.1.2
-nvidia-cusparse-cu12==12.5.4.2
-nvidia-cusparselt-cu12==0.6.3
-nvidia-nccl-cu12==2.26.2
-nvidia-nvjitlink-cu12==12.6.85
-nvidia-nvtx-cu12==12.6.77
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.3
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvtx-cu12==12.8.90
 openapi-core==0.19.5
 openapi-pydantic==0.5.1
 openapi-schema-validator==0.6.3
@@ -120,6 +122,7 @@ pillow==11.3.0
 pip==25.2
 platformdirs==4.4.0
 plotly==6.3.0
+pluggy==1.6.0
 ppscore==1.1.0
 prompt-toolkit==3.0.52
 protobuf==6.32.1
@@ -132,16 +135,17 @@ pyasn1-modules==0.4.2
 pycparser==2.23
 pydantic==2.11.9
 pydantic-core==2.33.2
-pydantic-settings==2.11.0
+pydantic-settings==2.10.1
 pygments==2.19.2
 pyparsing==3.2.5
-pyperclip==1.11.0
+pyperclip==1.10.0
 pyproject-hooks==1.2.0
+pytest==8.4.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
 pytz==2025.2
-pyyaml==6.0.3
+pyyaml==6.0.2
 pyzmq==27.1.0
 referencing==0.36.2
 requests==2.32.5
@@ -152,8 +156,8 @@ rich==14.1.0
 rich-rst==1.3.1
 rpds-py==0.27.1
 rsa==4.9.1
-scikit-learn==1.7.1
-scipy==1.15.3
+scikit-learn==1.7.2
+scipy==1.16.2
 seaborn==0.13.2
 setuptools==80.9.0
 shellingham==1.5.4
@@ -169,17 +173,19 @@ starlette==0.48.0
 sympy==1.14.0
 threadpoolctl==3.6.0
 tomlkit==0.13.3
+torch==2.8.0
+torchvision==0.23.0
 tornado==6.5.2
 traitlets==5.14.3
-triton==3.3.1
+triton==3.4.0
 truststore==0.10.4
 typing-extensions==4.15.0
 typing-inspection==0.4.1
 tzdata==2025.2
 unearth==0.17.5
 urllib3==2.5.0
-uvicorn==0.37.0
+uvicorn==0.36.0
 virtualenv==20.34.0
-wcwidth==0.2.14
+wcwidth==0.2.13
 werkzeug==3.1.1
 zipp==3.23.0
