--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Compose up
         run: docker compose up -d
       - name: Testing
-        run: docker compose exec -T cppm /app/.venv/bin/python -m pytest --ignore=app.py -v
+        run: docker compose exec -T cppm .venv/bin/pytest --ignore=app.py -v
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
