--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.10.0
+appnope==0.1.4
 asttokens==3.0.0
 attrs==25.3.0
 authlib==1.6.4
@@ -11,6 +12,7 @@ cffi==2.0.0
 charset-normalizer==3.4.3
 click==8.3.0
 cloudpickle==3.1.1
+colorama==0.4.6
 comm==0.2.3
 contourpy==1.3.3
 cryptography==45.0.7
@@ -18,14 +20,11 @@ cycler==0.12.1
 cyclopts==3.24.0
 dash==3.2.0
 dash-bootstrap-components==2.0.4
-dash-daq==0.6.0
 databricks-sdk==0.66.0
 debugpy==1.8.17
 decorator==5.2.1
-defusedxml==0.7.1
-dep-logic==0.5.2
-distlib==0.4.0
 dnspython==2.8.0
+docarray==0.41.0
 docker==7.1.0
 docstring-parser==0.17.0
 docutils==0.22.2
@@ -35,28 +34,24 @@ executing==2.2.1
 fastapi==0.118.0
 fastmcp==2.12.3
 filelock==3.19.1
-findpython==0.7.0
 flask==3.1.2
 fonttools==4.60.0
 fsspec==2025.9.0
+future-fstrings==1.2.0
 gitdb==4.0.12
 gitpython==3.1.45
 google-auth==2.40.3
 graphene==3.4.3
 graphql-core==3.2.6
 graphql-relay==3.2.0
-greenlet==3.2.4
 gunicorn==23.0.0
 h11==0.16.0
-hishel==0.1.3
 httpcore==1.0.9
 httpx==0.28.1
 httpx-sse==0.4.1
-id==1.5.0
 idna==3.10
 importlib-metadata==8.7.0
 iniconfig==2.1.0
-installer==0.7.0
 ipykernel==6.30.1
 ipython==9.5.0
 ipython-pygments-lexers==1.1.1
@@ -84,24 +79,11 @@ mlflow-skinny==3.4.0
 mlflow-tracing==3.4.0
 more-itertools==10.8.0
 mpmath==1.3.0
+mypy-extensions==1.1.0
 narwhals==2.6.0
 nest-asyncio==1.6.0
 networkx==3.5
 numpy==2.3.3
-nvidia-cublas-cu12==12.8.4.1
-nvidia-cuda-cupti-cu12==12.8.90
-nvidia-cuda-nvrtc-cu12==12.8.93
-nvidia-cuda-runtime-cu12==12.8.90
-nvidia-cudnn-cu12==9.10.2.21
-nvidia-cufft-cu12==11.3.3.83
-nvidia-cufile-cu12==1.13.1.3
-nvidia-curand-cu12==10.3.9.90
-nvidia-cusolver-cu12==11.7.3.90
-nvidia-cusparse-cu12==12.5.8.93
-nvidia-cusparselt-cu12==0.7.1
-nvidia-nccl-cu12==2.27.3
-nvidia-nvjitlink-cu12==12.8.93
-nvidia-nvtx-cu12==12.8.90
 openapi-core==0.19.5
 openapi-pydantic==0.5.1
 openapi-schema-validator==0.6.3
@@ -110,16 +92,14 @@ opentelemetry-api==1.37.0
 opentelemetry-proto==1.37.0
 opentelemetry-sdk==1.37.0
 opentelemetry-semantic-conventions==0.58b0
+orjson==3.11.3
 packaging==25.0
 pandas==2.3.2
 parse==1.20.2
 parso==0.8.5
 pathable==0.4.4
-pbs-installer==2025.9.18
-pdm==2.25.9
 pexpect==4.9.0
 pillow==11.3.0
-pip==25.2
 platformdirs==4.4.0
 plotly==6.3.0
 pluggy==1.6.0
@@ -139,8 +119,8 @@ pydantic-settings==2.10.1
 pygments==2.19.2
 pyparsing==3.2.5
 pyperclip==1.10.0
-pyproject-hooks==1.2.0
 pytest==8.4.2
+pytest-depends==1.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
@@ -149,7 +129,6 @@ pyyaml==6.0.2
 pyzmq==27.1.0
 referencing==0.36.2
 requests==2.32.5
-resolvelib==1.2.0
 retrying==1.4.2
 rfc3339-validator==0.1.4
 rich==14.1.0
@@ -160,11 +139,9 @@ scikit-learn==1.7.2
 scipy==1.16.2
 seaborn==0.13.2
 setuptools==80.9.0
-shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
-socksio==1.0.0
 sqlalchemy==2.0.43
 sqlparse==0.5.3
 sse-starlette==3.0.2
@@ -172,20 +149,18 @@ stack-data==0.6.3
 starlette==0.48.0
 sympy==1.14.0
 threadpoolctl==3.6.0
-tomlkit==0.13.3
 torch==2.8.0
 torchvision==0.23.0
 tornado==6.5.2
 traitlets==5.14.3
-triton==3.4.0
-truststore==0.10.4
+types-requests==2.32.4.20250913
 typing-extensions==4.15.0
+typing-inspect==0.9.0
 typing-inspection==0.4.1
 tzdata==2025.2
-unearth==0.17.5
 urllib3==2.5.0
+uv-test==0.1.0
 uvicorn==0.36.0
-virtualenv==20.34.0
 wcwidth==0.2.13
 werkzeug==3.1.1
 zipp==3.23.0
