--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -13,15 +13,20 @@ on:
 jobs:
   build-test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: app
+
     steps:
       - uses: actions/checkout@v4
 
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v2.0
         with:
-          env: |
-            MLFLOW_TRACKING_URI=${{ secrets.MLFLOW_TRACKING_URI }}
-            APP_MODEL_NAME=${{ secrets.APP_MODEL_NAME }}
+          envkey_MLFLOW_USERNAME: ${{ secrets.MLFLOW_USERNAME }}
+          envkey_MLFLOW_PASSWORD: ${{ secrets.MLFLOW_PASSWORD }}
+          envkey_MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_HOST }}
+          envkey_MODEL_NAME: ${{ secrets.MODEL_NAME }}
           file_name: .env
           fail_on_empty: true
           sort_keys: true
