--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ dependencies = [
     "ipykernel>=6.29.5",
     "fastapi>=0.118.0",
     "pytest>=8.4.2",
+    "uv-test>=0.1.0",
+    "pytest-depends>=1.0.1",
 ]
 
 [tool.pdm]
