--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install pytest in container
         run: docker compose exec -T dash uv pip install pytest
       - name: Testing
-        run: docker compose exec -T dash .venv/bin/pytest --ignore=app.py -v
+        run: docker compose exec -T dash pytest --ignore=app.py -v
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
