--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 alembic==1.16.5
 annotated-types==0.7.0
-anyio==4.10.0
+anyio==4.11.0
 appnope==0.1.4
 asttokens==3.0.0
 attrs==25.3.0
 authlib==1.6.4
+beautifulsoup4==4.14.2
 blinker==1.9.0
-cachetools==5.5.2
+cachetools==6.2.0
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
@@ -14,15 +15,17 @@ click==8.3.0
 cloudpickle==3.1.1
 colorama==0.4.6
 comm==0.2.3
-contourpy==1.3.3
+contourpy==1.3.2
 cryptography==45.0.7
 cycler==0.12.1
 cyclopts==3.24.0
 dash==3.2.0
 dash-bootstrap-components==2.0.4
-databricks-sdk==0.66.0
+dash-testing-stub==0.0.2
+databricks-sdk==0.67.0
 debugpy==1.8.17
 decorator==5.2.1
+dill==0.4.0
 dnspython==2.8.0
 docarray==0.41.0
 docker==7.1.0
@@ -32,15 +35,15 @@ email-validator==2.3.0
 exceptiongroup==1.3.0
 executing==2.2.1
 fastapi==0.118.0
-fastmcp==2.12.3
+fastmcp==2.12.4
 filelock==3.19.1
 flask==3.1.2
-fonttools==4.60.0
+fonttools==4.60.1
 fsspec==2025.9.0
 future-fstrings==1.2.0
 gitdb==4.0.12
 gitpython==3.1.45
-google-auth==2.40.3
+google-auth==2.41.0
 graphene==3.4.3
 graphql-core==3.2.6
 graphql-relay==3.2.0
@@ -53,7 +56,7 @@ idna==3.10
 importlib-metadata==8.7.0
 iniconfig==2.1.0
 ipykernel==6.30.1
-ipython==9.5.0
+ipython==8.37.0
 ipython-pygments-lexers==1.1.1
 isodate==0.7.2
 itsdangerous==2.2.0
@@ -67,23 +70,25 @@ jupyter-client==8.6.3
 jupyter-core==5.8.1
 kiwisolver==1.4.9
 lazy-object-proxy==1.12.0
+lxml==6.0.2
 mako==1.3.10
 markdown-it-py==4.0.0
-markupsafe==3.0.2
+markupsafe==3.0.3
 matplotlib==3.10.6
 matplotlib-inline==0.1.7
-mcp==1.14.1
+mcp==1.15.0
 mdurl==0.1.2
 mlflow==3.4.0
 mlflow-skinny==3.4.0
 mlflow-tracing==3.4.0
 more-itertools==10.8.0
 mpmath==1.3.0
+multiprocess==0.70.18
 mypy-extensions==1.1.0
 narwhals==2.6.0
 nest-asyncio==1.6.0
-networkx==3.5
-numpy==2.3.3
+networkx==3.4.2
+numpy==2.2.6
 openapi-core==0.19.5
 openapi-pydantic==0.5.1
 openapi-schema-validator==0.6.3
@@ -93,11 +98,13 @@ opentelemetry-proto==1.37.0
 opentelemetry-sdk==1.37.0
 opentelemetry-semantic-conventions==0.58b0
 orjson==3.11.3
+outcome==1.3.0.post0
 packaging==25.0
-pandas==2.3.2
+pandas==2.3.3
 parse==1.20.2
 parso==0.8.5
 pathable==0.4.4
+percy==2.0.2
 pexpect==4.9.0
 pillow==11.3.0
 platformdirs==4.4.0
@@ -115,17 +122,19 @@ pyasn1-modules==0.4.2
 pycparser==2.23
 pydantic==2.11.9
 pydantic-core==2.33.2
-pydantic-settings==2.10.1
+pydantic-settings==2.11.0
 pygments==2.19.2
+pyopenssl==25.3.0
 pyparsing==3.2.5
-pyperclip==1.10.0
+pyperclip==1.11.0
+pysocks==1.7.1
 pytest==8.4.2
 pytest-depends==1.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
 pytz==2025.2
-pyyaml==6.0.2
+pyyaml==6.0.3
 pyzmq==27.1.0
 referencing==0.36.2
 requests==2.32.5
@@ -136,12 +145,15 @@ rich-rst==1.3.1
 rpds-py==0.27.1
 rsa==4.9.1
 scikit-learn==1.7.2
-scipy==1.16.2
+scipy==1.15.3
 seaborn==0.13.2
+selenium==4.2.0
 setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.8
 sqlalchemy==2.0.43
 sqlparse==0.5.3
 sse-starlette==3.0.2
@@ -149,18 +161,23 @@ stack-data==0.6.3
 starlette==0.48.0
 sympy==1.14.0
 threadpoolctl==3.6.0
-torch==2.8.0
-torchvision==0.23.0
+torch==2.7.1
+torchvision==0.22.1
 tornado==6.5.2
 traitlets==5.14.3
+trio==0.31.0
+trio-websocket==0.12.2
 types-requests==2.32.4.20250913
 typing-extensions==4.15.0
 typing-inspect==0.9.0
 typing-inspection==0.4.1
 tzdata==2025.2
-urllib3==2.5.0
+urllib3==1.26.20
+urllib3-secure-extra==0.1.0
 uv-test==0.1.0
-uvicorn==0.36.0
-wcwidth==0.2.13
+uvicorn==0.37.0
+waitress==3.0.2
+wcwidth==0.2.14
 werkzeug==3.1.1
+wsproto==1.2.0
 zipp==3.23.0
