--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -55,7 +55,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: .Dockerfile
+          file: Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
   deploy:
