--- a/.github/workflows/test-model-staging.yml
+++ b/.github/workflows/test-model-staging.yml
@@ -30,6 +30,6 @@ jobs:
         run: docker compose up -d
       # Run model staging tests
       - name: Testing
-        run: docker compose run --rm cppm pytest tests/test_model_staging.py -v
+        run: docker compose run --rm cppm bash -c "source .venv/bin/activate && pytest tests/test_model_staging.py -v"
       - name: Transition to production
-        run: docker compose run --rm cppm python transition.py
+        run: docker compose run --rm cppm bash -c "source .venv/bin/activate && python transition.py"
