--- a/.github/workflows/test-model-staging.yml
+++ b/.github/workflows/test-model-staging.yml
@@ -29,6 +29,6 @@ jobs:
       # This is new
       # only run test on test_model_staging.py
       - name: Testing
-        run: docker compose exec -it dash pytest test_model_staging.py -v
+        run: docker compose exec -it cppm pytest test_model_staging.py -v
       - name: Transition to production
-        run: docker compose exec -it dash python transition.py
+        run: docker compose exec -it cppm python transition.py
