--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -35,7 +35,7 @@ jobs:
         run: docker compose up -d
       # Execute pytest
       - name: Testing
-        run: docker compose exec -it cppm pytest --ignore=test_model_staging.py -v
+        run: docker compose exec cppm pytest --ignore=tests/test_model_staging.py -v
       # If the testing pass, upload the image
       - name: Login to Docker Hub
         uses: docker/login-action@v3
