--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -69,9 +69,11 @@ jobs:
           host: ${{ vars.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
           proxy_host: ${{ vars.PROXY_HOST }}
           proxy_username: ${{ secrets.USERNAME }}
           proxy_key: ${{ secrets.KEY }}
+          proxy_passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             tag=${{ github.ref_name }} docker compose -f st125998/docker-compose.yaml down
             tag=${{ github.ref_name }} docker compose -f st125998/docker-compose.yaml up -d
