--- a/.github/workflows/test-model-staging.yml
+++ b/.github/workflows/test-model-staging.yml
@@ -29,6 +29,6 @@ jobs:
       # This is new
       # only run test on test_model_staging.py
       - name: Testing
-        run: docker compose exec -it cppm pytest test_model_staging.py -v
-      # - name: Transition to production
-      #   run: docker compose exec -it cppm python transition.py
+        run: docker compose exec cppm pytest tests/test_model_staging.py -v
+      - name: Transition to production
+        run: docker compose exec cppm python transition.py
