--- a/.github/workflows/test-model-staging.yml
+++ b/.github/workflows/test-model-staging.yml
@@ -21,6 +21,8 @@ jobs:
         with:
           envkey_MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
           envkey_APP_MODEL_NAME: ${{ secrets.APP_MODEL_NAME }}
+          envkey_MLFLOW_USERNAME: ${{ secrets.MLFLOW_USERNAME }}
+          envkey_MLFLOW_PASSWORD: ${{ secrets.MLFLOW_PASSWORD }}
           file_name: .env
           fail_on_empty: true
           sort_keys: true
@@ -30,5 +32,5 @@ jobs:
       # only run test on test_model_staging.py
       - name: Testing
         run: docker compose exec cppm pytest tests/test_model_staging.py -v
-      - name: Transition to production
+      - name: Model Transition
         run: docker compose exec cppm python transition.py
